--- a/style.css
+++ b/style.css
@@ -137,19 +137,24 @@ img{
     text-decoration: none;
     display: block;
     transition: all 0.3s;
+    padding: 0 2rem;
+}
+.nav-link-btn:link:nth-last-child(),
+.nav-link-btn:visited:nth-last-child(){
+padding-right: 6rem;
 }
 .nav-link-btn:link,
 .nav-link-btn:visited{
     padding: 0.8rem 2.5rem;
     border-radius: 3rem;
     background-color: var(--color-primary);
-    color: #222;
+    color: #fff;
 }
 .nav-link-btn:hover,
 .nav-link-btn:active{
     color: inherit;
     background-color: var(--color-primary-darker);
-    color: #333;
+    color: #fff;
 }
 
 /* =============================== */
@@ -202,3 +207,126 @@ h4{
     transform: scale(1.07,1.05) skew(-15deg);
     background-image: var(--gradient-primary);
 }
+
+/* =====features=== */
+
+.features{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
+    margin: 0 12rem;
+}
+.features-img{
+    width: 100%;
+}
+.features-feature{
+    align-self: center;
+    justify-self: center;
+    width: 70%;
+    font-size: 1.5rem;
+}
+.features-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-primary-opacity);
+    height: 5.5rem;
+    width: 5.5rem;
+    border-radius: 50%;
+    margin-bottom: 2rem;
+}
+.features-icon svg{
+height: 2.5rem;
+width: 2.5rem;
+fill: var(--color-primary);
+}
+.features-header{
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+/* operations */
+.operations{
+    max-width: 100rem;
+    margin: 12rem auto 0 auto;
+    background-color: #fff;
+}
+.operations-tab-container{
+display: flex;
+justify-content: center;
+}
+.operations-tab{
+    margin-right: 2.5rem;
+    transform: translateY(-50%);
+}
+.operations-tab span{
+    margin-right: 1rem;
+    font-weight: 600;
+    display: inline-block;
+}
+.operations-tab-1{
+    background-color: var(--color-seconader);
+}
+.operations-tab-1:hover{
+    background-color: var(--color-secondary-darker);
+}
+.operations-tab-3{
+    background-color: var(--color-tertiary);
+    margin: 0;
+}
+.operations-tab-3:hover{
+    background-color: var(--color-tertiary-darker);
+}
+.operations-tab-active{
+    transform: translateY(-66%);
+}
+.operations-content{
+    display: none;
+    font-size: 1.7rem;
+    padding: 2.5rem 7rem 6.5rem 7rem;
+}
+.operations-content-active{
+    display: grid;
+    grid-template-columns: 7rem 1fr;
+    column-gap: 3rem;
+    row-gap: 0.5rem;
+}
+.operations-header{
+    font-size: 2.25rem;
+    font-weight: 500;
+    align-self: center;
+}
+.operations-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+}
+.operations-icon svg{
+    height: 2.75rem;
+    width: 2.75rem;
+}
+.operations-content p{
+    grid-column: 2;
+}
+.operations-icon-1{
+    background-color: var(--color-secondary-opacity);
+}
+.operations-icon-2{
+    background-color: var(--color-primary-opacity);
+}
+.operations-icon-3{
+    background-color: var(--color-tertiary-opacity);
+}
+.operations-icon-1 svg{
+    fill: var(--color-secondary-darker);
+}
+.operations-icon-2 svg{
+    fill: var(--color-primary-darker);
+}
+.operations-icon-3 svg{
+    fill: var(--color-tertiary-darker);
+}
+
+/* slider */
