--- a/style.css
+++ b/style.css
@@ -137,12 +137,9 @@ img{
     text-decoration: none;
     display: block;
     transition: all 0.3s;
-    padding: 0 2rem;
+   
 }
-.nav-link-btn:link:nth-last-child(),
-.nav-link-btn:visited:nth-last-child(){
-padding-right: 6rem;
-}
+
 .nav-link-btn:link,
 .nav-link-btn:visited{
     padding: 0.8rem 2.5rem;
@@ -194,7 +191,7 @@ h4{
 .highlight{
     position: relative;
 }
-.highlight:active{
+.highlight::after{
     display: block;
     content: '';
     position: absolute;
@@ -330,3 +327,283 @@ justify-content: center;
 }
 
 /* slider */
+
+.slider{
+    max-width: 100rem;
+    height: 50rem;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+}
+.slide{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 50rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 1s;
+}
+
+.slide > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.slider-btn{
+position: absolute;
+top: 50%;
+z-index: 10;
+border: none;
+background: rgba(255,255,255,0.7);
+font-family: inherit;
+color: #333;
+border-radius: 50%;
+height: 5.5rem;
+width: 5.5rem;
+font-size: 3.25rem;
+cursor: pointer;
+
+}
+.slider-btn-left{
+    left: 6%;
+    transform: translate(-50%,-50%);
+}
+.slider-btn-right{
+    right: 6%;
+    transform: translate(50%,-50% );
+}
+.dots{
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+}
+.dots-dot{
+    border: none;
+    background-color: #b9b9b9;
+    opacity: 0.7;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    margin-right:1.75rem;
+    cursor: pointer;
+    transition: all 0.5s;
+    box-shadow: 0 0.6rem 1.5rem rgba(0,0,0,0.7);
+}
+.dots-dot:last-child{
+    margin: 0;
+}
+.dots-dot-active{
+    background-color: #888;
+    opacity: 1;
+}
+.testimonial{
+    font-family: inherit;
+    width: 65%;
+    position: relative;
+}
+.testimonial::before{
+    content: '\201C';
+    position: absolute;
+    top: -5.7rem;
+    left: -6.8rem;
+    line-height: 1;
+    font-size: 20rem;
+    font-family: inherit;
+    color: var(--color-primary);
+    z-index: -1;
+}
+.testimonial-header{
+    font-size: 2.25rem;
+    font-weight: 500;
+    margin-bottom: 1.5rem;
+}
+.testimonial-text{
+    font-size: 1.7rem;
+    margin-bottom: 3.5rem;
+    color: #666;
+}
+.testimonial-author{
+    margin: 3rem;
+    font-family: normal;
+    display: grid;
+    grid-template-columns: 6.5rem 1fr;
+    column-gap: 2rem;
+}
+.testimonial-photo{
+    grid-row: 1/span 2;
+    width: 6.5rem;
+    border-radius: 50%;
+}
+.testimonial-name{
+    font-size: 1.7rem;
+    font-weight: 500;
+    align-self: end;
+    margin: 0;
+}
+.testimonial-location{
+    font-size: 1.5rem;
+}
+
+.section-title-testimonials{
+    margin-bottom: 4rem;
+}
+
+/* ============================== */
+
+.section-sign-up{
+    background-color: #37383d;
+    border-top: none;
+    border-bottom: 1px solid #444;
+    text-align: center;
+    padding: 10rem 3rem;
+}
+.section-sign-up .section-header{
+    color: #fff;
+    text-align: center;
+}
+.section-sign-up .section-title{
+ margin-bottom: 6rem;
+}
+
+.section-sign-up .btn{
+    font-size: 1.9rem;
+    padding: 2rem 5rem;
+}
+
+/* ==================================== */
+
+.footer{
+    padding: 10rem 3rem;
+    background-color: #37383d;
+}
+.footer-nav{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5rem;
+}
+.footer-item{
+    margin-right: 4rem;
+}
+.footer-link{
+    font-size: 1.6rem;
+    color: #eee;
+    text-decoration: none;
+}
+.footer-logo{
+    height: 5rem;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 5rem;
+}
+.footer-copyright{
+    font-size: 1.4rem;
+    color: #aaa;
+    text-align: center;
+}
+.footer-copyright .footer-link{
+    font-size: 1.4rem;
+}
+
+/* ================================= */
+
+.modal{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 60rem;
+    background-color: #f3f3f3;
+    padding: 5rem 6rem;
+    box-shadow: 0 4rem 6rem rgba(0,0,0,0.3);
+    z-index: 1000;
+    transition: all 0.5s;
+}
+.overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    backdrop-filter: blur(4px);
+    z-index: 100;
+    transition: all 0.5s;
+}
+.modal-header{
+    font-size: 3.25rem;
+    margin-bottom: 4.5rem;
+    line-height: 1.5;
+}
+.modal-form{
+    margin: 0 3rem;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    gap: 2.5rem;
+}
+.modal-form label{
+    font-size: 1.7rem;
+    font-weight: 500;
+}
+.modal-form input{
+    font-size: 1.7rem;
+    padding: 1rem 1.5rem;
+    border: 1px solid #ddd;
+    border-radius: 0.5rem;
+}
+.modal-form button{
+    grid-column: 1 / span 2 ;
+    justify-self: center;
+    margin-top: 1rem;
+}
+.btn-close-modal{
+    font-family: inherit;
+    color: inherit;
+    position: absolute;
+    top: 0.5rem;
+    right: 2rem;
+    font-size: 4rem;
+    cursor: pointer;
+    border: none;
+    background: none;
+}
+.hidden{
+    visibility: hidden;
+    opacity: 0;
+}
+
+
+/* cookie massage */
+
+.cookie-massage{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    background-color: white;
+    color: #bbb;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
