added cookie button

--- a/style.css
+++ b/style.css
@@ -211,6 +211,11 @@ h4{
     transform: scale(1.07,1.05) skew(-15deg);
     background-image: var(--gradient-primary);
 }
+.header .cookie-massage{
+    position: fixed;
+    top: 70rem;
+    z-index: 1000;
+}
 
 /* =====features=== */
 
@@ -488,10 +493,18 @@ cursor: pointer;
 }
 .footer-nav{
     list-style: none;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 5rem;
+    margin: 0 auto;
+    display: grid;
+    width: 50%;
+    text-align: center;
+    grid-template-columns: 2fr 2fr;
 }
+.footer-mob-1,
+.footer-mob-2{
+    display: flex;
+     flex-direction: row;
+    gap: 0rem;
+    }
 .footer-item{
     margin-right: 4rem;
 }
@@ -504,6 +517,7 @@ cursor: pointer;
     height: 5rem;
     display: block;
     margin: 0 auto;
+    margin-top: 5rem;
     margin-bottom: 5rem;
 }
 .footer-copyright{
@@ -592,7 +606,7 @@ cursor: pointer;
     width: 100%;
     background-color: white;
     color: #bbb;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 400;
 }
 .mobile-menu{
@@ -714,9 +728,14 @@ cursor: pointer;
     grid-template-columns: 1fr 1fr;
     row-gap: 3rem;
    }
-   .operations-tab-3{
-    grid-column-start: 1;
-    grid-column-end: 3;
+   .footer-nav{
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    width: 100%;
+   }
+   .footer-mob-1,
+   .footer-mob-2{
+    flex-direction: column;
    }
 }
 
